[package]
name = "rengine"
version = "0.6.2"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"
description = "Game engine/framework that aggregates several existing libraries"
categories = ["game-engines"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.7.3"
daggy = "0.6.0"
error-chain = "0.12.1"
gfx = "0.18.1"
gfx_core = "0.9.1"
gfx_device_gl = "0.16.1"
gfx_window_glutin = "0.31.0"
glutin = "0.21.0"
gfx_glyph = "0.17.0"
image = "0.21.1"
lazy_static = "1.4.0"
log = "0.4"
mopa = "0.2"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
nalgebra-glm = "0.4.0"
num-traits = "0.2.6"
rlua = "0.17"
rlua_serde = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
shred = "0.7.0"
shred-derive = "0.5.0"
shrev = "1.1.1"
specs = { version = "0.14.3", default_features = false } # disable rayon due to CPU usage bug
specs-derive = "0.4.0"
slotmap = { version = "0.4", features = ["unstable"] }
toml = "0.5"
walkdir = "2.2"

[dev-dependencies]
criterion = "0.2.11"
simple_logger = "1.3"

[[bench]]
name = "voxel"

[features]
default= []

serde-serialize = []
